// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`find function [{ a, b }] |> find(e => e.a === 3) === { a: 3, b: "c" } 1`] = `
Object {
  "a": 3,
  "b": "c",
}
`;

exports[`find function is a pure function 1`] = `
Array [
  Object {
    "a": 1,
    "b": "a",
  },
  Object {
    "a": 2,
    "b": "b",
  },
  Object {
    "a": 3,
    "b": "c",
  },
  Object {
    "a": 4,
    "b": "d",
  },
]
`;
